# robotic-arm

./: CMakeLists.txt  README.md
assets/textures/: checker.tga
shaders/: phong.frag  phong.vert
src/: RobotArm.cpp  RobotArm.hpp  Scene.cpp  Scene.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  main.cpp
